--- a/index.html
+++ b/index.html
@@ -1,41 +1,82 @@
-<!-- header.html -->
-<header class="site-header">
-  <!-- Top orange bar -->
-  <div class="bg-warning py-2">
-    <div class="container header-container d-flex justify-content-between align-items-center flex-wrap">
-      <div class="left-group">
-        <a href="index.html" class="text-dark me-3"><i class="fas fa-home"></i> Home</a>
-        <a href="https://indianrail.gov.in" target="_blank" class="text-dark">Railway Official Website</a>
-      </div>
-      <div class="right-group">
-        <a href="about.html" class="text-dark me-3">About Us</a>
-        <a href="register.html" id="registerLink" class="text-dark me-3">Register</a>
-        <a href="login.html" id="loginLink" class="text-dark me-3">Login</a>
-        <button id="logoutButton" class="btn btn-outline-dark btn-sm" style="display:none;">Logout</button>
-      </div>
-      <button class="hamburger navbar-toggler d-lg-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    </div>
-  </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>IR-LDCE Quiz</title>
 
-  <!-- White navbar under orange bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-main">
-    <div class="container header-container">
-      <a class="navbar-brand d-flex align-items-center" href="index.html">
-        <img src="logo.png" alt="IR-LDCE Logo" style="height:48px;max-width:120px;width:auto;object-fit:contain;display:inline-block;" />
-        <span class="ms-2 fw-bold">IR-LDCE</span>
-      </a>
-      <div class="collapse navbar-collapse" id="mainNavbar">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 nav-links">
-          <li class="nav-item">
-            <a class="nav-link" href="categories.html">CATEGORIES</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="daily-dose.html">DAILY DOSE</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+  <!-- Dynamic Header -->
+  <div id="include-header"></div>
+
+  <!-- Main Content -->
+  <main class="container mt-5">
+    <h1>Welcome to IR-LDCE</h1>
+    <p>This is the landing page for the LDCE exam portal.</p>
+  </main>
+
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Firebase SDKs -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+
+    // Your Firebase config
+    const firebaseConfig = {
+      apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
+      authDomain: "quiz-app-1b48b.firebaseapp.com",
+      projectId: "quiz-app-1b48b",
+      storageBucket: "quiz-app-1b48b.appspot.com",
+      messagingSenderId: "765334603137",
+      appId: "1:765334603137:web:1c8a13f6086a6773c2d480",
+      measurementId: "G-YQJQWJ12N7"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+
+    // Load header and setup auth-based visibility
+    async function includeHeaderAndSetupAuth() {
+      const response = await fetch("header.html");
+      const html = await response.text();
+      document.getElementById("include-header").innerHTML = html;
+
+      const loginLink = document.getElementById("loginLink");
+      const registerLink = document.getElementById("registerLink");
+      const logoutButton = document.getElementById("logoutButton");
+
+      onAuthStateChanged(auth, (user) => {
+        if (user) {
+          loginLink.style.display = "none";
+          registerLink.style.display = "none";
+          logoutButton.style.display = "inline-block";
+        } else {
+          loginLink.style.display = "inline-block";
+          registerLink.style.display = "inline-block";
+          logoutButton.style.display = "none";
+        }
+      });
+
+      if (logoutButton) {
+        logoutButton.addEventListener("click", () => {
+          signOut(auth);
+        });
+      }
+    }
+
+    includeHeaderAndSetupAuth();
+  </script>
+</body>
+</html>
