--- a/header.html
+++ b/header.html
@@ -33,6 +33,11 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="daily-dose.html">DAILY DOSE</a>
+               <div id="dashboardBtnContainer">
+        <button id="dashboardBtn" type="button">
+          <i class="fa fa-user-circle"></i> Dashboard
+        </button>
+      </div>
           </li>
         </ul>
       </div>
