--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   <div id="include-header"></div>
 
   <!-- Main Content -->
-  <main class="container mt-5">
-    <h1>Welcome to IR-LDCE</h1>
-    <p>This is the landing page for the LDCE exam portal.</p>
-  </main>
+ <main class="container mt-5" style="text-align: center;">
+  <h1>Welcome to IR-LDCE</h1>
+  <p>This is the landing page for the LDCE exam portal.</p>
+</main>
     <h3 class="mb-3">Available Quizzes</h3>
       <div class="quiz-list d-grid gap-2">
         <button class="btn btn-outline-primary manual-btn" data-manual="irwm" aria-label="Start quiz for Indian Railway Works Manual">1. Indian Railway Works Manual</button>
