--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Main Content -->
  <main class="container mt-5" style="text-align: center;">
   <h1>Welcome to IR-LDCE</h1>
-  <p>This is the landing page for the LDCE exam portal.</p>
+  <p>This is the landing page for the LDCE exam preparation portal.</p>
 </main>
     <h3 class="mb-3">Available Quizzes</h3>
       <div class="quiz-list d-grid gap-2">
