--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <h1>Welcome to IR-LDCE</h1>
   <p>This is the landing page for the LDCE exam preparation portal.</p>
 </main>
-    <h3 class="mb-3">Available Quizzes</h3>
+    <h3 class="mb-3 text-center">Available Quizzes</h3>
       <div class="quiz-list d-grid gap-2">
         <button class="btn btn-outline-primary manual-btn" data-manual="irwm" aria-label="Start quiz for Indian Railway Works Manual">1. Indian Railway Works Manual</button>
         <button class="btn btn-outline-primary manual-btn" data-manual="irpwm" aria-label="Start quiz for Indian Railway P-way Manual">2. Indian Railway P-way Manual</button>
