--- a/quiz.html
+++ b/quiz.html
@@ -74,77 +74,14 @@
     </div>
   </div>
 
-  <!-- Firebase SDK -->
+  <!-- Firebase SDK and Auth Code Here (unchanged) -->
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-    import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
-      authDomain: "quiz-app-1b48b.firebaseapp.com",
-      projectId: "quiz-app-1b48b",
-      storageBucket: "quiz-app-1b48b.appspot.com",
-      messagingSenderId: "765334603137",
-      appId: "1:765334603137:web:1c8a13f6086a6773c2d480",
-      measurementId: "G-YQJQWJ12N7"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
-    window.firebaseApp = app;
-    window.firebaseAuth = auth;
-    window.firebaseDb = db;
-
-    // Make currentUser available globally
-    window.currentUser = null;
-
-    onAuthStateChanged(auth, async (user) => {
-      if (!user) {
-        const returnUrl = encodeURIComponent(window.location.pathname + window.location.search);
-        window.location.href = `login.html?redirect=${returnUrl}`;
-      } else {
-        window.currentUser = user;
-        document.getElementById('loading').style.display = 'none';
-        document.querySelector('.app').style.display = 'block';
-
-        const userRef = doc(db, "users", user.uid);
-        const userSnap = await getDoc(userRef);
-        if (userSnap.exists()) {
-          const userData = userSnap.data();
-        }
-
-        if (typeof initQuiz === 'function') {
-          initQuiz();
-        }
-      }
-    });
+    // ... your existing Firebase auth code here ...
   </script>
 
-  <!-- Main Quiz Logic -->
+  <!-- Main Quiz Logic (updated to fetch from JSON file) -->
   <script>
-    const questions = [
-      {
-        question: "Which is the largest animal in the world?",
-        answers: [
-          { text: "Shark", correct: false },
-          { text: "Blue Whale", correct: true },
-          { text: "Elephant", correct: false },
-          { text: "Giraffe", correct: false }
-        ]
-      },
-      {
-        question: "Which is the smallest continent in the world?",
-        answers: [
-          { text: "Asia", correct: false },
-          { text: "Australia", correct: true },
-          { text: "Arctic", correct: false },
-          { text: "Africa", correct: false }
-        ]
-      }
-    ];
-
+    let questions = [];
     let currentIndex = 0;
     let score = 0;
     const quizDuration = 60;
@@ -155,12 +92,33 @@
     const nextBtn = document.getElementById("next-btn");
     const quizTimer = document.getElementById("quizTimer");
 
-    function initQuiz() {
+    async function initQuiz() {
       currentIndex = 0;
       score = 0;
       nextBtn.style.display = 'none';
-      showQuestion();
-      startTimer();
+
+      // Get manual param from URL, fallback to 'general'
+      const manual = new URLSearchParams(window.location.search).get("manual") || "general";
+
+      try {
+        // Load questions JSON file from same directory e.g. "irwm.json"
+        const response = await fetch(`${manual}.json`);
+        if (!response.ok) throw new Error(`Failed to load ${manual}.json`);
+
+        questions = await response.json();
+
+        if (!Array.isArray(questions) || questions.length === 0) {
+          throw new Error("No questions found in JSON");
+        }
+
+        showQuestion();
+        startTimer();
+      } catch (err) {
+        questionElem.textContent = `Error loading questions: ${err.message}`;
+        answersDiv.innerHTML = "";
+        nextBtn.style.display = 'none';
+        quizTimer.style.display = 'none';
+      }
     }
 
     function showQuestion() {
@@ -169,7 +127,7 @@
       questionElem.textContent = q.question;
       answersDiv.innerHTML = "";
 
-      q.answers.forEach((answer) => {
+      q.answers.forEach(answer => {
         const btn = document.createElement("button");
         btn.textContent = answer.text;
         btn.classList.add("answer-btn");
