--- a/quiz.html
+++ b/quiz.html
@@ -74,12 +74,29 @@
     </div>
   </div>
 
-  <!-- Firebase SDK and Auth Code Here (unchanged) -->
+  <!-- Firebase Auth State Listener Module -->
   <script type="module">
-    // ... your existing Firebase auth code here ...
+    import { auth } from './firebase-auth.js'; // your auth export
+    import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+
+    onAuthStateChanged(auth, (user) => {
+      if (!user) {
+        // Not logged in, redirect to login page (adjust URL if needed)
+        const returnUrl = encodeURIComponent(window.location.pathname + window.location.search);
+        window.location.href = `login.html?redirect=${returnUrl}`;
+      } else {
+        // Logged in, show quiz UI and start quiz
+        window.currentUser = user;
+        document.getElementById('loading').style.display = 'none';
+        document.querySelector('.app').style.display = 'block';
+
+        // Call the global initQuiz() defined below
+        initQuiz();
+      }
+    });
   </script>
 
-  <!-- Main Quiz Logic (updated to fetch from JSON file) -->
+  <!-- Main Quiz Logic -->
   <script>
     let questions = [];
     let currentIndex = 0;
