--- a/quiz.html
+++ b/quiz.html
@@ -50,7 +50,7 @@
       border-color: #f44336;
     }
     #next-btn {
-      margin: 15px auto 0 auto;
+      margin-top: 15px;
       padding: 10px 20px;
       font-size: 1.1em;
       cursor: pointer;
@@ -59,8 +59,6 @@
       background-color: #1976d2;
       color: white;
       display: none;
-      display: block;
-      width: fit-content;
     }
   </style>
 </head>
@@ -76,12 +74,29 @@
     </div>
   </div>
 
-  <!-- Firebase SDK and Auth Code Here (unchanged) -->
+  <!-- Firebase Auth State Listener Module -->
   <script type="module">
-    // ... your existing Firebase auth code here ...
+    import { auth } from './firebase-auth.js'; // your auth export
+    import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+
+    onAuthStateChanged(auth, (user) => {
+      if (!user) {
+        // Not logged in, redirect to login page (adjust URL if needed)
+        const returnUrl = encodeURIComponent(window.location.pathname + window.location.search);
+        window.location.href = `login.html?redirect=${returnUrl}`;
+      } else {
+        // Logged in, show quiz UI and start quiz
+        window.currentUser = user;
+        document.getElementById('loading').style.display = 'none';
+        document.querySelector('.app').style.display = 'block';
+
+        // Call the global initQuiz() defined below
+        initQuiz();
+      }
+    });
   </script>
 
-  <!-- Main Quiz Logic (updated to fetch from JSON file) -->
+  <!-- Main Quiz Logic -->
   <script>
     let questions = [];
     let currentIndex = 0;
@@ -103,9 +118,9 @@
       const manual = new URLSearchParams(window.location.search).get("manual") || "general";
 
       try {
-        // Load questions JSON file from same directory e.g. "irwm-questions.json"
+        // Load questions JSON file from same directory e.g. "irwm.json"
         const response = await fetch(`${manual}-questions.json`);
-        if (!response.ok) throw new Error(`Failed to load ${manual}-questions.json`);
+        if (!response.ok) throw new Error(`Failed to load ${manual}.json`);
 
         questions = await response.json();
 
@@ -219,11 +234,6 @@
         window.location.href = 'dashboard.html';
       });
     }
-
-    // Call initQuiz after auth check (assuming auth handled elsewhere)
-    window.onload = () => {
-      initQuiz();
-    };
   </script>
 </body>
 </html>
