--- a/header.html
+++ b/header.html
@@ -63,6 +63,12 @@
   </nav>
 </header>
 
+<!-- Bootstrap 5 CSS (in <head>) -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- Bootstrap 5 Bundle JS (before </body>) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 <!-- Optional: Custom CSS for better spacing/alignment -->
 <style>
   .site-header .navbar-brand img {
@@ -87,3 +93,63 @@
     }
   }
 </style>
+
+<!-- Login/Logout Toggle Logic -->
+<script>
+  // Simulate login state using localStorage
+  // For real apps, replace this with your authentication logic
+  function isLoggedIn() {
+    return localStorage.getItem('isLoggedIn') === 'true';
+  }
+
+  function setLoggedIn(val) {
+    localStorage.setItem('isLoggedIn', val ? 'true' : 'false');
+  }
+
+  function updateAuthUI() {
+    const loggedIn = isLoggedIn();
+
+    // Desktop
+    document.getElementById('registerLink').style.display = loggedIn ? 'none' : '';
+    document.getElementById('loginLink').style.display = loggedIn ? 'none' : '';
+    document.getElementById('logoutButton').style.display = loggedIn ? '' : 'none';
+
+    // Mobile
+    document.getElementById('registerLinkMobile').style.display = loggedIn ? 'none' : '';
+    document.getElementById('loginLinkMobile').style.display = loggedIn ? 'none' : '';
+    document.getElementById('logoutButtonMobile').style.display = loggedIn ? '' : 'none';
+  }
+
+  // Attach event listeners for logout
+  document.addEventListener('DOMContentLoaded', function() {
+    // Initial UI update
+    updateAuthUI();
+
+    // Logout buttons
+    document.getElementById('logoutButton').addEventListener('click', function() {
+      setLoggedIn(false);
+      updateAuthUI();
+      // Optionally redirect to home or login page
+      window.location.href = 'index.html';
+    });
+    document.getElementById('logoutButtonMobile').addEventListener('click', function() {
+      setLoggedIn(false);
+      updateAuthUI();
+      window.location.href = 'index.html';
+    });
+
+    // For demo: simulate login on login/register click
+    document.getElementById('loginLink').addEventListener('click', function() {
+      setLoggedIn(true);
+    });
+    document.getElementById('registerLink').addEventListener('click', function() {
+      setLoggedIn(true);
+    });
+    document.getElementById('loginLinkMobile').addEventListener('click', function() {
+      setLoggedIn(true);
+    });
+    document.getElementById('registerLinkMobile').addEventListener('click', function() {
+      setLoggedIn(true);
+    });
+  });
+</script>
