--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <button class="btn btn-outline-primary manual-btn" data-manual="fbwm" aria-label="Start quiz for FBW Manual">7. FBW Manual</button>
         <button class="btn btn-outline-primary manual-btn" data-manual="store" aria-label="Start quiz for Store Manual">8. Store Manual</button>
         <button class="btn btn-outline-primary manual-btn" data-manual="account" aria-label="Start quiz for Account Manual">9. Account Manual</button>
-        <button class="btn btn-outline-primary manual-btn" data-manual="pyq2021" aria-label="Start quiz for 2021 30% Main">9. PYQ 30% Main</button>
+        <button class="btn btn-outline-primary manual-btn" data-manual="pyq2021" aria-label="Start quiz for 2021 30% Main">10. PYQ 30% Main 2021</button>
       </div>
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
