--- a/dashboard.html
+++ b/dashboard.html
@@ -69,6 +69,7 @@
         <button class="btn btn-outline-primary manual-btn" data-manual="store" aria-label="Start quiz for Store Manual">8. Store Manual</button>
         <button class="btn btn-outline-primary manual-btn" data-manual="account" aria-label="Start quiz for Account Manual">9. Account Manual</button>
         <button class="btn btn-outline-primary manual-btn" data-manual="pyq2021" aria-label="Start quiz for 2021 30% Main">9. PYQ 30% Main</button>
+        <button class="btn btn-outline-primary manual-btn" data-manual="pyq2021" aria-label="Start quiz for 2021 30% Main">10. PYQ 30% Main 2021</button>
       </div>
     </section>
   </main>
