--- a/dashboard.html
+++ b/dashboard.html
@@ -57,7 +57,7 @@
 
     <!-- Available quizzes -->
     <section class="dashboard-section" id="quiz-section">
-      <h3 class="mb-3">Available Quizzes</h3>
+       <h3 class="mb-3 text-center">Available Quizzes</h3>
       <div class="quiz-list d-grid gap-2">
         <button class="btn btn-outline-primary manual-btn" data-manual="irwm" aria-label="Start quiz for Indian Railway Works Manual">1. Indian Railway Works Manual</button>
         <button class="btn btn-outline-primary manual-btn" data-manual="irpwm" aria-label="Start quiz for Indian Railway P-way Manual">2. Indian Railway P-way Manual</button>
