--- a/header.html
+++ b/header.html
@@ -40,7 +40,7 @@
             <a class="nav-link fw-bold" href="daily-dose.html">DAILY DOSE</a>
           </li>
           <li class="nav-item">
-            <button id="dashboardBtn" type="button" class="btn btn-outline-dark btn-sm ms-lg-2 fw-bold">
+            <button id="dashboardBtn" type="button" class="btn btn-outline-dark btn-sm ms-lg-2 fw-bold" style="display:none;">
               <i class="fa fa-user-circle"></i> Dashboard
             </button>
           </li>
@@ -68,6 +68,8 @@
 
 <!-- Bootstrap 5 Bundle JS (before </body>) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Font Awesome (for icons) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <!-- Optional: Custom CSS for better spacing/alignment -->
 <style>
@@ -94,46 +96,62 @@
   }
 </style>
 
-<script>
-  // Simulate login state using localStorage
-  function isLoggedIn() {
-    return localStorage.getItem('isLoggedIn') === 'true';
-  }
+<!-- Firebase Auth logic for header -->
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+  import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-  function setLoggedIn(val) {
-    localStorage.setItem('isLoggedIn', val ? 'true' : 'false');
-  }
+  // Your Firebase config
+  const firebaseConfig = {
+    apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
+    authDomain: "quiz-app-1b48b.firebaseapp.com",
+    projectId: "quiz-app-1b48b",
+    storageBucket: "quiz-app-1b48b.appspot.com",
+    messagingSenderId: "765334603137",
+    appId: "1:765334603137:web:1c8a13f6086a6773c2d480"
+  };
 
-  function updateAuthUI() {
-    const loggedIn = isLoggedIn();
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
 
+  function updateHeaderUI(user) {
     // Desktop
     const registerLink = document.getElementById('registerLink');
     const loginLink = document.getElementById('loginLink');
     const logoutButton = document.getElementById('logoutButton');
-
-    if (registerLink) registerLink.style.display = loggedIn ? 'none' : '';
-    if (loginLink) loginLink.style.display = loggedIn ? 'none' : '';
-    if (logoutButton) logoutButton.style.display = loggedIn ? '' : 'none';
-
     // Mobile
     const registerLinkMobile = document.getElementById('registerLinkMobile');
     const loginLinkMobile = document.getElementById('loginLinkMobile');
     const logoutButtonMobile = document.getElementById('logoutButtonMobile');
-
-    if (registerLinkMobile) registerLinkMobile.style.display = loggedIn ? 'none' : '';
-    if (loginLinkMobile) loginLinkMobile.style.display = loggedIn ? 'none' : '';
-    if (logoutButtonMobile) logoutButtonMobile.style.display = loggedIn ? '' : 'none';
-
-    // Dashboard button: only visible if logged in
+    // Dashboard button
     const dashboardBtn = document.getElementById('dashboardBtn');
-    if (dashboardBtn) dashboardBtn.style.display = loggedIn ? '' : 'none';
+
+    if (user) {
+      if (registerLink) registerLink.style.display = 'none';
+      if (loginLink) loginLink.style.display = 'none';
+      if (logoutButton) logoutButton.style.display = '';
+      if (registerLinkMobile) registerLinkMobile.style.display = 'none';
+      if (loginLinkMobile) loginLinkMobile.style.display = 'none';
+      if (logoutButtonMobile) logoutButtonMobile.style.display = '';
+      if (dashboardBtn) dashboardBtn.style.display = '';
+    } else {
+      if (registerLink) registerLink.style.display = '';
+      if (loginLink) loginLink.style.display = '';
+      if (logoutButton) logoutButton.style.display = 'none';
+      if (registerLinkMobile) registerLinkMobile.style.display = '';
+      if (loginLinkMobile) loginLinkMobile.style.display = '';
+      if (logoutButtonMobile) logoutButtonMobile.style.display = 'none';
+      if (dashboardBtn) dashboardBtn.style.display = 'none';
+    }
   }
 
   document.addEventListener('DOMContentLoaded', function() {
-    updateAuthUI();
+    // Monitor Firebase Auth state
+    onAuthStateChanged(auth, function(user) {
+      updateHeaderUI(user);
+    });
 
-    // Dashboard button click handler
+    // Dashboard button
     const dashboardBtn = document.getElementById('dashboardBtn');
     if (dashboardBtn) {
       dashboardBtn.addEventListener('click', function() {
@@ -145,44 +163,19 @@
     const logoutButton = document.getElementById('logoutButton');
     if (logoutButton) {
       logoutButton.addEventListener('click', function() {
-        setLoggedIn(false);
-        updateAuthUI();
-        window.location.href = 'index.html';
+        signOut(auth).then(function() {
+          window.location.href = 'index.html';
+        });
       });
     }
     const logoutButtonMobile = document.getElementById('logoutButtonMobile');
     if (logoutButtonMobile) {
       logoutButtonMobile.addEventListener('click', function() {
-        setLoggedIn(false);
-        updateAuthUI();
-        window.location.href = 'index.html';
+        signOut(auth).then(function() {
+          window.location.href = 'index.html';
+        });
       });
     }
-
-    // For demo: simulate login on login/register click and redirect to dashboard
-    const loginLink = document.getElementById('loginLink');
-    if (loginLink) loginLink.addEventListener('click', function(e) {
-      setLoggedIn(true);
-      e.preventDefault();
-      window.location.href = 'dashboard.html';
-    });
-    const registerLink = document.getElementById('registerLink');
-    if (registerLink) registerLink.addEventListener('click', function(e) {
-      setLoggedIn(true);
-      e.preventDefault();
-      window.location.href = 'dashboard.html';
-    });
-    const loginLinkMobile = document.getElementById('loginLinkMobile');
-    if (loginLinkMobile) loginLinkMobile.addEventListener('click', function(e) {
-      setLoggedIn(true);
-      e.preventDefault();
-      window.location.href = 'dashboard.html';
-    });
-    const registerLinkMobile = document.getElementById('registerLinkMobile');
-    if (registerLinkMobile) registerLinkMobile.addEventListener('click', function(e) {
-      setLoggedIn(true);
-      e.preventDefault();
-      window.location.href = 'dashboard.html';
-    });
+    // Login/Register links: let them go to their respective pages
   });
 </script>
