--- a/dashboard.html
+++ b/dashboard.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <title>User Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
+
   <!-- Bootstrap CSS for layout and responsiveness -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  
+
   <!-- Font Awesome (for optional icons) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  
+
   <!-- Custom styles -->
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -57,7 +57,7 @@
 
     <!-- Available quizzes -->
     <section class="dashboard-section" id="quiz-section">
-       <h3 class="mb-3 text-center">Available Quizzes</h3>
+      <h3 class="mb-3 text-center">Available Quizzes</h3>
       <div class="quiz-list d-grid gap-2">
         <button class="btn btn-outline-primary manual-btn" data-manual="irwm" aria-label="Start quiz for Indian Railway Works Manual">1. Indian Railway Works Manual</button>
         <button class="btn btn-outline-primary manual-btn" data-manual="irpwm" aria-label="Start quiz for Indian Railway P-way Manual">2. Indian Railway P-way Manual</button>
@@ -74,16 +74,28 @@
   </main>
 
   <!-- Protect dashboard: Only for logged-in users -->
-  <script>
-    // Check login status before showing dashboard
-    if (localStorage.getItem('isLoggedIn') !== 'true') {
-      // Option 1: Redirect immediately
-      window.location.href = 'login.html';
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-      // Option 2: If you want to show error instead of redirect, comment above line and uncomment below:
-      // document.querySelector('main').classList.add('d-none');
-      // document.getElementById('error-message').classList.remove('d-none');
-    }
+    const firebaseConfig = {
+      apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
+      authDomain: "quiz-app-1b48b.firebaseapp.com",
+      projectId: "quiz-app-1b48b",
+      storageBucket: "quiz-app-1b48b.appspot.com",
+      messagingSenderId: "765334603137",
+      appId: "1:765334603137:web:1c8a13f6086a6773c2d480"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+
+    onAuthStateChanged(auth, (user) => {
+      if (!user) {
+        // Not logged in, redirect to login page
+        window.location.href = 'login.html';
+      }
+    });
   </script>
 
   <!-- Load external header -->
@@ -95,7 +107,7 @@
         const html = await response.text();
         document.getElementById("include-header").innerHTML = html;
       } catch (error) {
-        document.getElementById("include-header").innerHTML = 
+        document.getElementById("include-header").innerHTML =
           '<div class="alert alert-warning text-center">Could not load header.</div>';
         console.error("Header load error:", error);
       }
