--- a/index.html
+++ b/index.html
@@ -41,14 +41,28 @@
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Load header dynamically -->
+  <!-- Load header dynamically and execute its scripts -->
   <script type="module">
     (async function loadHeader() {
       try {
         const response = await fetch("header.html");
         if (!response.ok) throw new Error("Failed to fetch header");
         const html = await response.text();
-        document.getElementById("include-header").innerHTML = html;
+        const headerDiv = document.getElementById("include-header");
+        headerDiv.innerHTML = html;
+
+        // Evaluate any <script> tags in the fetched header
+        Array.from(headerDiv.querySelectorAll("script")).forEach(oldScript => {
+          const newScript = document.createElement("script");
+          if (oldScript.type) newScript.type = oldScript.type;
+          if (oldScript.src) {
+            newScript.src = oldScript.src;
+          } else {
+            newScript.textContent = oldScript.textContent;
+          }
+          document.body.appendChild(newScript);
+          oldScript.remove();
+        });
       } catch (error) {
         document.getElementById("include-header").innerHTML =
           '<div class="alert alert-warning text-center">Could not load header.</div>';
