--- a/dashboard.html
+++ b/dashboard.html
@@ -92,29 +92,42 @@
 
     onAuthStateChanged(auth, (user) => {
       if (!user) {
-        // Not logged in, redirect to login page
         window.location.href = 'login.html';
       }
     });
   </script>
 
-  <!-- Load external header -->
+  <!-- Load external header and execute its scripts -->
   <script type="module">
     (async function loadHeader() {
       try {
         const response = await fetch("header.html");
         if (!response.ok) throw new Error("Failed to fetch header");
         const html = await response.text();
-        document.getElementById("include-header").innerHTML = html;
+        const headerDiv = document.getElementById("include-header");
+        headerDiv.innerHTML = html;
+
+        // Execute header scripts after insertion
+        Array.from(headerDiv.querySelectorAll("script")).forEach(oldScript => {
+          const newScript = document.createElement("script");
+          if (oldScript.type) newScript.type = oldScript.type;
+          if (oldScript.src) {
+            newScript.src = oldScript.src;
+          } else {
+            newScript.textContent = oldScript.textContent;
+          }
+          document.body.appendChild(newScript);
+          oldScript.remove();
+        });
       } catch (error) {
-        document.getElementById("include-header").innerHTML =
+        document.getElementById("include-header").innerHTML = 
           '<div class="alert alert-warning text-center">Could not load header.</div>';
         console.error("Header load error:", error);
       }
     })();
   </script>
 
-  <!-- Bootstrap JS (for dropdowns/toggles if needed) -->
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Firebase logic -->
