--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <!-- HEADER SCRIPT -->
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+    import { initializeApp, getApps } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
     import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
     const firebaseConfig = {
@@ -78,7 +78,8 @@
       appId: "1:765334603137:web:1c8a13f6086a6773c2d480"
     };
 
-    const app = initializeApp(firebaseConfig);
+    // Avoid double initialization if using modules elsewhere
+    const app = getApps().length ? getApps()[0] : initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
     function updateHeaderUI(user) {
@@ -112,35 +113,38 @@
       }
     }
 
-    onAuthStateChanged(auth, function(user) {
-      updateHeaderUI(user);
+    // Ensure DOM is ready before querying elements
+    window.addEventListener('DOMContentLoaded', function() {
+      onAuthStateChanged(auth, function(user) {
+        updateHeaderUI(user);
 
-      // Dashboard button
-      const dashboardBtn = document.getElementById('dashboardBtn');
-      if (dashboardBtn) {
-        dashboardBtn.onclick = function() {
-          window.location.href = 'dashboard.html';
-        };
-      }
+        // Dashboard button
+        const dashboardBtn = document.getElementById('dashboardBtn');
+        if (dashboardBtn) {
+          dashboardBtn.onclick = function() {
+            window.location.href = 'dashboard.html';
+          };
+        }
 
-      // Logout buttons
-      const logoutButton = document.getElementById('logoutButton');
-      if (logoutButton) {
-        logoutButton.onclick = function() {
-          signOut(auth).then(function() {
-            window.location.href = 'index.html';
-          });
-        };
-      }
-      const logoutButtonMobile = document.getElementById('logoutButtonMobile');
-      if (logoutButtonMobile) {
-        logoutButtonMobile.onclick = function() {
-          signOut(auth).then(function() {
-            window.location.href = 'index.html';
-          });
-        };
-      }
-      // Login/Register links: let them go to their respective pages
+        // Logout buttons
+        const logoutButton = document.getElementById('logoutButton');
+        if (logoutButton) {
+          logoutButton.onclick = function() {
+            signOut(auth).then(function() {
+              window.location.href = 'index.html';
+            });
+          };
+        }
+        const logoutButtonMobile = document.getElementById('logoutButtonMobile');
+        if (logoutButtonMobile) {
+          logoutButtonMobile.onclick = function() {
+            signOut(auth).then(function() {
+              window.location.href = 'index.html';
+            });
+          };
+        }
+        // Login/Register links: let them go to their respective pages
+      });
     });
   </script>
 
